# GLXOSD

./: .babelrc  .csscomb.json  .eslintrc  .gitignore  .gitmodules  .prettydiffrc  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  LICENSE  README.md  TriggerFontConfig.cmake  _config.yml  analyse.html  app.js  clean  config.toml  dev.sh  faq.html  faq.md  gatsby-browser.js  gatsby-node.js  glxosd  html.jsx  index.html  index.md  install.html  jsconfig.json  launcher_template.sh  launcher_template.sh.in  package.json  package.sh  rebuild.sh  test glxgears.launch  usage.md  write_preload.sh
_includes/: footer.html  head.html  header.html  legal.html
_layouts/: default.html  full.html  post.html
analytics/: index.js
components/: Footer.jsx  MainNav.jsx  NavItem.jsx  TableOfContents.jsx
components/analyser/: AnalyserUploaderComponent.jsx  AnalyserView.jsx  FileReaderProgressComponent.jsx  GraphComponent.jsx  TimeLogComponent.jsx  TimeLogException.jsx  TimeLogProcessor.jsx  ZoomControl.jsx
conf/: glxosd.conf
css/: _carousel.scss  _variables.scss  app.css  foundicon.css  jquery-ui.css  jquery-ui.structure.css  jquery-ui.theme.css  main.scss
debian/: changelog  changelog.in  control  control.in  copyright  glxosd-data.install  glxosd-data.lintian-overrides  glxosd-libs-amd64.install  glxosd-libs-amd64.lintian-overrides  glxosd-libs-i386.install  glxosd-libs-i386.lintian-overrides  glxosd-libs-libsensors-support-amd64.install  glxosd-libs-libsensors-support-amd64.lintian-overrides  glxosd-libs-libsensors-support-i386.install  glxosd-libs-libsensors-support-i386.lintian-overrides  glxosd-libs-nvidia-support-amd64.install  glxosd-libs-nvidia-support-amd64.lintian-overrides  glxosd-libs-nvidia-support-i386.install  glxosd-libs-nvidia-support-i386.lintian-overrides  glxosd.install  glxosd.lintian-overrides  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch.ex
debian/source/: options
fonts/: LICENSE_general_foundicons
fragments/: index-rest.jade
js/: FileSaver.js  analyser.js  canvas-toBlob.js  common.js  html2canvas.js  jquery.flot.navigate.js  jquery.textareaAutoResize.js
loaders/html-loader/: index.js
modules/: FindFTGL.cmake  FindFontConfig.cmake  FindLuaJIT.cmake  FindNVCTRL.cmake  FindSensors.cmake
pages/: 404.md  _template.jsx  index.jsx  install.html
pages/analyse/: index.js
pages/docs/: _template.jsx  index.jsx
pages/docs/config/: index.html
pages/docs/faq/: index.html
pages/docs/opts/: index.html
pages/docs/use/: index.html
src/: CMakeLists.txt
src/elfhacks/: CMakeLists.txt  elfhacks.c  elfhacks.cpp
src/freetype-gl-glxosd/: CMakeLists.txt  freetype-gl.version  freetype-gl.version.in  gl-dynamic-loader.c  gl-dynamic-loader.h  strndup.c  strndup.h
src/ftgl/: CMakeLists.txt  CMakeLists.txt2  FTContour.cpp  config.h
src/glinject/: CMakeLists.txt  glinject.c  glinject.cpp  glinject.h  glinject.hpp  glinject.version  glx_events.c  glx_events.h  lock.hpp  luajit_dynamic.c  luajit_dynamic.h  overrides.h  overrides.hpp  syncopengl.hpp  x_events.c  x_events.h
src/glxosd/: Bootstrap.lua  CMakeLists.txt  Colour.cpp  Colour.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  ConfigurationManager.lua  Context.lua  FontRenderer.cpp  FontRenderer.hpp  GLAttribState.cpp  GLAttribState.hpp  GLLoader.hpp  GLXOSD.cpp  GLXOSD.hpp  GLXOSDLoader.cpp  GLXOSDLoader.hpp  Main.lua  OSD.cpp  OSD.hpp  OSDInstance.cpp  OSDInstance.hpp  Optional.hpp  SensorDataProvider.cpp  SensorDataProvider.hpp  SensorDataProviderManager.cpp  SensorDataProviderManager.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Utils.cpp  Utils.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Wrapper.hpp  init.lua  nvidia_sensors.cpp  nvidia_sensors.hpp  osd.cpp  osd.hpp  osdinstance.cpp  (+3 more)
src/glxosd-libsensors-support/: CMakeLists.txt  LibsensorsSensorDataProvider.cpp  LibsensorsSensorDataProvider.hpp
src/glxosd-nvidia-support/: CMakeLists.txt  NvidiaSensorDataProvider.cpp  NvidiaSensorDataProvider.hpp
src/glxosd/conf/: arch.lua  chainload.lua  glxosd_config.lua  paths.lua
src/glxosd/conf/OSD/dataproviders/FrameDataProvider/: formatterfunction.lua
src/glxosd/conf/OSD/dataproviders/LibsensorsDataProvider/: formatterfunction.lua
src/glxosd/conf/OSD/dataproviders/NVMLDataProvider/: formatterfunction.lua
src/glxosd/conf/StatisticsOSD/dataproviders/FrameDataProvider/: formatterfunction.lua
src/glxosd/conf/StatisticsOSD/dataproviders/LibsensorsDataProvider/: formatterfunction.lua
src/glxosd/conf/StatisticsOSD/dataproviders/NVMLDataProvider/: formatterfunction.lua
src/glxosd/ffi/: clock.lua  ffi_types.lua  ffitypes.lua  fontconfig.lua  freetype-gl.lua  gl.lua  glext.lua  gltypes.lua  glx.lua  init.lua  libsensors.lua  nvml.lua
src/glxosd/plugins/OSD/: OSD.lua
src/glxosd/plugins/OSD/dataproviders/: FrameDataProvider.lua  LibsensorsDataProvider.lua  NVMLDataProvider.lua
src/glxosd/plugins/StatisticsOSD/: StatisticsOSD.lua  init.lua
src/glxosd/plugins/StatisticsOSD/dataproviders/: DummyDataProvider.lua  FrameDataProvider.lua  LibsensorsDataProvider.lua  NVMLDataProvider.lua
src/glxosd/plugins/TimeRecorder/: TimeRecorder.lua
src/glxosd/rendering/: MarkupElement.lua  TextRenderer.lua  gl_error.lua  glerror.lua  normalise_gl_state.lua  shader_support.lua  shadersupport.lua  text_renderer.lua
src/glxosd/util/: fontutil.lua  formattingutil.lua  util.lua
wrappers/: html.jsx  md.jsx
