set(GLXOSD_VERSION_MAJOR 1)
set(GLXOSD_VERSION_MINOR 0)
set(GLXOSD_VERSION_PATCH 1)
set(GLXOSD_VERSION_STRING ${GLXOSD_VERSION_MAJOR}.${GLXOSD_VERSION_MINOR}.${GLXOSD_VERSION_PATCH})
SET(SOURCE_FILES osd.cpp osdinstance.cpp)
if(SENSORS_FOUND)
	SET(SOURCE_FILES ${SOURCE_FILES} standard_sensors.cpp)
endif(SENSORS_FOUND)
if(NVCTRL_FOUND)
	SET(SOURCE_FILES ${SOURCE_FILES} nvidia_sensors.cpp)
endif(NVCTRL_FOUND)
add_library(glxosd SHARED ${SOURCE_FILES})
add_dependencies(glxosd ftgl)
target_link_libraries(glxosd dl rt ${FREETYPE_LIBRARIES} ${OPENGL_LIBRARIES} ${FONTCONFIG_LIBRARY} ${SENSORS_LIBRARIES} ${Boost_REGEX_LIBRARY} ${Boost_LIBRARIES} ${X11_LIBRARIES} ${NVCTRL_LIBRARIES} ${OUTPUT_DIR}/libglxosd-ftgl.so)
set_target_properties(glxosd PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR} LIBRARY_OUTPUT_NAME glxosd)
set_target_properties(glxosd PROPERTIES VERSION ${GLXOSD_VERSION_STRING}
                                          SOVERSION ${GLXOSD_VERSION_MAJOR})
INSTALL(TARGETS glxosd
  LIBRARY DESTINATION lib/glxosd
)
